--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -59,9 +59,10 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{proposition}{Proposition}
 \newtheorem{assumption}{Assumption}
+\newtheorem{example}{Example}
 
 %\newtheorem{my_proof}{\textit{\textbf{Proof}}}[]
-\newenvironment{my_proof}{\textbf{\textit{Proof:}}}{\hfill$\square$}
+\newenvironment{my_proof}{\textbf{{Proof:}}}{\hfill$\square$}
 
 \newtheorem{remark}{Remark}
 
@@ -71,8 +72,11 @@
 % COMMANDS
 
 \newcommand*{\QED}{\hfill\ensuremath{\square}}
+
+\newcommand{\rkhs}{\mathcal{H}}
 \newcommand{\rknorm}[1]{\left\| #1 \right\|_\mathcal{H}}
 \newcommand{\rkinner}[2]{\langle #1, #2 \rangle_\mathcal{H}}
+
 \newcommand{\infnorm}[1]{\left\| #1 \right\|_\infty}
 \newcommand{\onenorm}[1]{\left\| #1 \right\|_1}
 
