--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -50,3 +50,90 @@
 	publisher={MIT press}
 }
 
+@book{wendland2004scattered,
+	title={Scattered data approximation},
+	author={Wendland, Holger},
+	year={2004},
+	publisher={Cambridge university press}
+}
+
+@book{steinwart2008svm_book,
+	title={Support vector machines},
+	author={Steinwart, Ingo and Christmann, Andreas},
+	year={2008},
+	publisher={Springer Science \& Business Media}
+}
+
+
+@article{steinwart2006explicit_rbf_rkhs,
+	title={{An explicit description of the reproducing kernel Hilbert spaces of Gaussian RBF kernels}},
+	author={Steinwart, Ingo and Hush, Don and Scovel, Clint},
+	journal={IEEE Transactions on Information Theory},
+	volume={52},
+	number={10},
+	pages={4635--4643},
+	year={2006},
+	publisher={IEEE}
+}
+
+@article{steinwart2020_no_rkhs_cont_func,
+	title={Reproducing kernel hilbert spaces cannot contain all continuous functions on a compact metric space},
+	author={Steinwart, Ingo},
+	journal={arXiv preprint arXiv:2002.03171},
+	year={2020}
+}
+
+@article{micchelli2006universal,
+	title={Universal Kernels.},
+	author={Micchelli, Charles A and Xu, Yuesheng and Zhang, Haizhang},
+	journal={Journal of Machine Learning Research},
+	volume={7},
+	number={12},
+	year={2006}
+}
+
+
+@article{aronszajn1950theory,
+	title={Theory of reproducing kernels},
+	author={Aronszajn, Nachman},
+	journal={Transactions of the American mathematical society},
+	volume={68},
+	number={3},
+	pages={337--404},
+	year={1950}
+}
+
+@book{berlinet2011reproducing,
+	title={Reproducing kernel Hilbert spaces in probability and statistics},
+	author={Berlinet, Alain and Thomas-Agnan, Christine},
+	year={2011},
+	publisher={Springer Science \& Business Media}
+}
+
+@article{sejdinovic2012rkhs,
+	title={What is an {RKHS?}},
+	author={Sejdinovic, Dino and Gretton, Arthur},
+	journal={Lecture Notes},
+	year={2012}
+}
+
+
+@book{searcoid2002elements,
+	title={Elements of abstract analysis},
+	author={Searc{\'o}id, M{\'\i}che{\'a}l {\'O} and Searcoid, MO},
+	year={2002},
+	publisher={Springer}
+}
+
+@book{pugh2002real,
+	title={Real mathematical analysis},
+	author={Pugh, Charles Chapman},
+	year={2002},
+	publisher={Springer}
+}
+
+
+
+
+
+
