--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -92,6 +92,16 @@
 	year={2006}
 }
 
+@inproceedings{kidger2020universal,
+	title={Universal approximation with deep narrow networks},
+	author={Kidger, Patrick and Lyons, Terry},
+	booktitle={Conference on learning theory},
+	pages={2306--2327},
+	year={2020},
+	organization={PMLR}
+}
+
+
 
 @article{aronszajn1950theory,
 	title={Theory of reproducing kernels},
