--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -24,7 +24,7 @@
 \include{head/dedication}
 \setcounter{page}{0}
 \include{head/acknowledgements}
-\include{head/preface}
+%\include{head/preface}
 \include{head/abstracts}
 
 \cleardoublepage
